# docs/swagger.json
@@ -223,14 +223,14 @@
                         "type": "integer",
                         "default": 1,
                         "description": "Page number",
-                        "name": "page",
+                        "name": "Page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 10,
                         "description": "Limit per page",
-                        "name": "limit",
+                        "name": "Limit",
                         "in": "query"
                     }
                 ],
@@ -331,6 +331,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.APIResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Workspace username already exists",
                         "schema": {
                             "$ref": "#/definitions/middleware.APIResponse"
                         }
